--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Barlow:wght@400..700" />
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@600" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
