Add filtering by data use

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css2?family=Barlow:wght@400..700" />
+          href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500" />    
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@1,400" />
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@600" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
