--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@600" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Ethyca Datamap</title>
   </head>
   <body>
     <div id="root"></div>
